feature: add contracts.
